--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,3 +26,6 @@
 @import "theme/parallax";
 @import "theme/slide-parallax";
 @import "theme/ourprojects";
+
+//Our Services
+@import "theme/our_services";
