--- a/scss/theme/_home.scss
+++ b/scss/theme/_home.scss
@@ -1,4 +1,5 @@
 .banner-area {
+	height: 100vh;
 	background: url(../img/banner.jpg) no-repeat center center/cover;
 	.overlay-bg {
 		background: -moz-linear-gradient(left, rgba(15, 2, 138, 0) 0%, rgba(0, 0, 0, 0) 100%);
