--- a/css/main.css
+++ b/css/main.css
@@ -1522,22 +1522,22 @@ img.image-modal-proyectos {
   The Each Loop iterate each value of the variable $listImages that contain the URL values of the images
   The $i variable increments its value to know with imagep1-6 is going to applicate the CSS value*/
 .imagenp1:hover {
-  background-image: url(../img/c1.jpg); }
+  background-image: url(../img/Portfolio/1F.png); }
 
 .imagenp2:hover {
-  background-image: url(../img/c2.jpg); }
+  background-image: url(../img/Portfolio/2K.png); }
 
 .imagenp3:hover {
-  background-image: url(../img/c3.jpg); }
+  background-image: url(../img/Portfolio/3M.png); }
 
 .imagenp4:hover {
-  background-image: url(../img/c4.jpg); }
+  background-image: url(../img/Portfolio/4S.png); }
 
 .imagenp5:hover {
-  background-image: url(../img/c5.jpg); }
+  background-image: url(../img/Portfolio/5Y.png); }
 
 .imagenp6:hover {
-  background-image: url(../img/c7.jpg); }
+  background-image: url(../img/Portfolio/6YY.png); }
 
 /*End of Mixin Code*/
 .single-product2:hover {
